[[DocReleaseNotes]]
== BCD-UI Release Notes

=== Release Notes

The following release notes allow following BCD-UI's ongoing development. +
Potentially breaking changes are listed under _Incompatibilities_.

___
==== Release 5_7_0 ...in progress

.Major new features:
* switched to Java 17, Gradle 8.5, Tomcat 10.1

.Server:
* updated several 3rd party jars
* updated default web.xml and enforce usage of https
* cookies created are flagged as "secure"
* CORS: to make your app CORSable use `de.businesscode.bcdui.web.filters.ShiroFilter` as a replacement of `org.apache.shiro.web.servlet.ShiroFilter` and add `de.businesscode.bcdui.web.filters.CorsFilter` as a first in the chain and cover resources which should be available to CORS, or set it to `/*` to enable for the whole site.
* added BindingItem description element, also added to WRS Header

.Client:
* Login Widget to be used in login-pages, i.e. via `<bcd-loginng>` custom tag
* new dataprovider options tblSelect, tblSelectRow, tblUpdate, tblInsert, tblDelete which offers wrs -> object -> wrs functions (currently limited to wrs)
* added bcdui.bcdAlerter (.info/.warn/.error) to show a slide in alert
* autogrow attribute for textarea widget
.Security:
.Development:
.Bugfixes:

.Incompatibilities:
* In SQLEngine::transform '-' postfix needs to be converted to '\_' to omit table alias like `INSERT INTO $t.painTableName ($t.colName_) VALUES (1)`
* Removal of Internet Explorer support
* javax to jakarta switch (for several packages e.g. javax.servlet)
* new 3rd party jars set
* cookies created are flagged as "secure", requiring https
* add BindingInfo servlet to web.xml
* OAuth2 configuration in shiro.ini: OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri
* wrq filter operator like automatically escapes %, _ and \ now. Don't use local workarounds where you add \ yourself.

___
==== Release 5_6_0

.Major new features: